--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name=distribution content=global>
 	<meta name="robots" content="INDEX,ALL">
 	<meta name='yandex-verification' content='5ad1963e225adb8a' />
-	<title>ДвериДВ Хабаровск</title>
+	<title>Двери-ДВ Хабаровск</title>
 
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
